# debil-dynamodb

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: attribute.rs  attributes.rs  lib.rs
tests/: lib.rs
