[package]
name = "debil-dynamodb"
version = "0.1.1"
authors = ["myuon <ioi.joi.koi.loi@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/debil-dynamodb"
description = "DynamoDB dialect for debil"
repository = "https://github.com/myuon/debil-dynamodb"
readme = "README.md"
keywords = ["database"]
categories = ["database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debil = "0.2.0"
rusoto_dynamodb = "0.43.0"
bytes = "0.5.4"
